# django-cookie-consent

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.sh  setup.cfg  setup.py  tbump.toml  tox.ini
.github/: CODE_OF_CONDUCT.md
.github/actions/build-js/: action.yml
.github/workflows/: ci.yml  code_quality.yml  release.yml
cookie_consent/: __init__.py  admin.py  apps.py  cache.py  compat.py  conf.py  forms.py  managers.py  middleware.py  models.py  signals.py  urls.py  util.py  views.py  widgets.py
cookie_consent/fixtures/: common_cookies.json
cookie_consent/locale/en/LC_MESSAGES/: django.mo  django.po
cookie_consent/locale/nl/LC_MESSAGES/: django.mo  django.po
cookie_consent/locale/oc/: django.mo
cookie_consent/locale/oc/LC_MESSAGES/: django.po
cookie_consent/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
cookie_consent/locale/sl/LC_MESSAGES/: django.mo  django.po
cookie_consent/migrations/: 0001_initial.py  0002_auto__add_logitem.py  0003_add_cookietype.py  0003_alter_cookie_id_alter_cookiegroup_id_and_more.py  0003_alter_cookiegroup_varname.py  0004_cookie_natural_key.py
cookie_consent/static/cookie_consent/: cookiebar-module.js  cookiebar.js  cookiebar.module.js  cookiebar.module.js.map
cookie_consent/templates/cookie_consent/: _cookie_group.html  base.html  cookie_group_widget.html  cookiegroup_list.html
cookie_consent/templatetags/: cookie_consent_tags.py
docs/: api_middleware.rst  api_models.rst  api_templatetags.rst  api_util.rst  api_views.rst  changelog.rst  check_sphinx.py  concept.rst  conf.py  configuration.rst  contributing.rst  example_app.rst  getting_started.rst  index.rst  installation.rst  javascript.rst  quickstart.rst  settings.rst  usage.rst
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: cookiebar.ts  index.ts
requirements/: base.txt  dev.txt
testapp/: fixture.json  settings.py  urls.py  views.py
testapp/static/: styles.css
testapp/templates/: legacy_test_page.html  share-button-script.html  show-cookie-bar-script.html  test_page.html
tests/: conftest.py  database.db  settings.py  test_admin.py  test_cache.py  test_cookie_group_model.py  test_cookie_model.py  test_javascript_cookiebar.py  test_legacy_javascript_cookiebar.py  test_middleware.py  test_models.py  test_settings.py  test_templatetags.py  test_util.py  test_views.py  urls.py
tests/core/: urls.py  views.py
tests/core/templates/: test_page.html
tests/core/tests/: __init__.py  models_tests.py  test_cache.py  test_middleware.py  test_util.py  test_views.py  util_tests.py  views_tests.py
