# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-cookie-consent
version = 0.5.0b0
description = Django cookie consent application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jazzband/django-cookie-consent
project_urls =
    Documentation = https://django-cookie-consent.readthedocs.io/en/latest/
    Changelog = https://github.com/jazzband/django-cookie-consent/blob/master/docs/changelog.rst
    Bug Tracker = https://github.com/jazzband/django-cookie-consent/issues
    Source Code = https://github.com/jazzband/django-cookie-consent
license = BSD
author = Informatika Mihelac
author_email = bmihelac@mihelac.org
keywords = cookies, cookie-consent, cookie bar
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
    django-appconf
tests_require =
    pytest
    pytest-django
    pytest-playwright
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    cookie_consent
    cookie_consent.*

[options.extras_require]
tests =
    pytest
    pytest-django
    pytest-playwright
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    tbump
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=cookie_consent
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings
markers =
    e2e: mark tests as end-to-end tests, using playwright (deselect with '-m "not e2e"')

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,docs

[coverage:run]
branch = True
source = cookie_consent
omit =
    # migrations run while django initializes the test db
    */migrations/*

[coverage:report]
skip_covered = True
